[package]
name = "my_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde_json = "1"
tower = {version = "0.5.0", features = ["full"]}
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hyper-util = "0.1.7"
